# qt-cpp-radio

./: CMakeLists.txt  Main.qml  README.md  main.cpp  radiostatus.cpp  radiostatus.h
.github/workflows/: build-release.yml
